--- a/dde/dde.conf
+++ b/dde/dde.conf
@@ -62,7 +62,7 @@
   ## Precision will NOT be used for service inputs. It is up to each individual
   ## service input to set the timestamp at the appropriate precision.
   ## Valid time units are "ns", "us" (or "µs"), "ms", "s".
-  precision = ""
+  precision = "1us"
 
   ## Logging configuration:
   ## Run telegraf with debug log messages.
@@ -78,17 +78,22 @@
   omit_hostname = true
 
 # Send telegraf metrics to file(s)
-[[outputs.file]]
+#[[outputs.file]]
   ## Files to write to, "stdout" is a specially handled file.
-  files = ["stdout", "dde.out"]
+  #files = ["stdout", "dde.out"]
 
   ## Data format to output.
   ## Each data format has its own unique set of configuration options, read
   ## more about them here:
   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md
-  data_format = "json"
+  #data_format = "json"
+  
+  ## The resolution to use for the metric timestamp.  Must be a duration string
+  ## such as "1ns", "1us", "1ms", "10ms", "1s".  Durations are truncated to
+  ## the power of 10 less than the specified units.
+  #json_timestamp_units = "1us"
 
 [[outputs.influxdb]]
-
+#[[inputs.influxdb]]
 [[inputs.dde]]
 
