--- a/dde/dde.conf
+++ b/dde/dde.conf
@@ -96,4 +96,6 @@
 [[outputs.influxdb]]
 #[[inputs.influxdb]]
 [[inputs.dde]]
-
+    ## Universal DDE Connector login information
+	name = "dde"
+	password = "1q2w3e4r"
