rename to username

--- a/dde/dde.conf
+++ b/dde/dde.conf
@@ -97,5 +97,5 @@
 #[[inputs.influxdb]]
 [[inputs.dde]]
     ## Universal DDE Connector login information
-	name = "dde"
+	username = "dde"
 	password = "1q2w3e4r"
